# grid_bot_metagpt

./: pyproject.toml  requirements.txt
docs/: api_spec_and_tasks.md  prd.md  system_design.md
grid_bot_manager/: forms.py  main.py  models.py  views.py
grid_bot_manager/services/: grid_bot_service.py
grid_bot_manager/tests/: test_grid_bot_service.py
resources/: competitive_analysis.mmd  data_api_design.mmd  seq_flow.mmd
