[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "flask",
    "bcrypt",
    "sqlalchemy",
    "flask-login",
    "ccxt",
    "pytest",
    "docker",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
